fixed openapi generator build code
